[gd_scene load_steps=5 format=3 uid="uid://camr2edmarv8v"]

[ext_resource type="Script" path="res://scenes/guis/scripts/level_select.gd" id="1_iiebt"]
[ext_resource type="LabelSettings" uid="uid://b5wbsy6h22dyo" path="res://scenes/guis/resources/heading.tres" id="2_slbep"]
[ext_resource type="Texture2D" uid="uid://otd5ss3iqlad" path="res://assets/guis/back_normal.png" id="3_kdk8f"]
[ext_resource type="Texture2D" uid="uid://buroqr0pth2f2" path="res://assets/guis/back_hover.png" id="4_grqny"]

[node name="LevelSelect" type="CanvasLayer"]
script = ExtResource("1_iiebt")

[node name="LevelSelect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSelect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 96

[node name="Label" type="Label" parent="LevelSelect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Level"
label_settings = ExtResource("2_slbep")
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="LevelSelect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="GridContainer" parent="LevelSelect/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 64
theme_override_constants/v_separation = 64
columns = 6

[node name="BackButton" type="TextureButton" parent="LevelSelect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("3_kdk8f")
texture_pressed = ExtResource("4_grqny")
texture_hover = ExtResource("4_grqny")
texture_focused = ExtResource("4_grqny")

[connection signal="pressed" from="LevelSelect/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
